--- a/index.html
+++ b/index.html
@@ -2,39 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Author" content="Forhadul Islam" />
-    <title>Digital clock with vanilla javascript</title>
-    <!-- main style -->
-    <link rel="stylesheet" href="css/style.css" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta name="keywords" content="Clock" />
+    <title>Document</title>
+
+    <!-- font style  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- css link  -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
+    <!-- clock container-->
     <div class="container">
-      <div class="clock-container">
-        <div class="hours">
-          <span>Hours</span>
-          <p id="hour">00</p>
-        </div>
-        <div class="colon">:</div>
-        <div class="minutes">
-          <span>Minutes</span>
-          <p id="minute">00</p>
-        </div>
-        <div class="colon">:</div>
-        <div class="seconds">
-          <span>Seconds</span>
-          <p id="second">00</p>
+      <div class="clock">
+        <div class="colck-container">
+          <div id="hours">
+            <h2>Hours</h2>
+            <h1></h1>
+          </div>
+          <span>:</span>
+          <div id="minutes">
+            <h2>Minutes</h2>
+            <h1></h1>
+          </div>
+          <span>:</span>
+          <div id="secoend">
+            <h2>Secoends</h2>
+            <h1></h1>
+          </div>
         </div>
       </div>
-      <div class="bottom">
-        <div class="progress-bar" id="progress"></div>
+      <div class="animated">
+        <div id="secoensContaingAnimationbar"></div>
       </div>
     </div>
 
-    <!-- js files -->
-    <script src="js/app.js"></script>
+    <!-- javascript link  -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
